--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -475,4 +475,12 @@ header {
   .mobile-menu.active {
     width: 200px;
   }
+  .back{
+    width: 100%;
+    height: 100vh;
+  }
+  .back.active{
+    background-color: rgba(122, 120, 120, 0.575);
+
+  }
 }
