--- a/assets/scss/_htcTouch.scss
+++ b/assets/scss/_htcTouch.scss
@@ -350,3 +350,137 @@
     }
   }
 }
+
+#htc_product{
+  .title {
+    .subtitle {
+      font-size: 26px;
+      margin: 0;
+      margin-bottom: 12px;
+      color: #eb4d4b;
+    }
+    .home {
+      font-size: 34px;
+      position: relative;
+      .home_title:before {
+        position: absolute;
+        content: "";
+        width: 80px;
+        height: 4px;
+        background: #eb4d4b;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        text-align: center;
+        margin: 0 auto;
+        margin-top: 20px;
+      }
+    }
+  }
+  .item{
+    .device {
+      margin-bottom: 110px;
+      width: 241px;
+      height: 241px;
+      padding: 11px;
+      position: relative;
+      .image {
+        height: 100%;
+        position: relative;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+  
+        .first {
+          position: absolute;
+          opacity: 1;
+          transition: 1s all;
+        }
+        .second {
+          position: absolute;
+          opacity: 0;
+          transition: 1s all;
+        }
+        &:hover {
+          .first {
+            opacity: 0;
+            transform: rotateY(180deg);
+          }
+          .second {
+            opacity: 1;
+            transform: rotateY(180deg);
+          }
+        }
+        cursor: pointer;
+      }
+      .rating {
+        position: absolute;
+        bottom: 40px;
+        left: 50%;
+        transform: translateX(-50%);
+        .yellow {
+          color: yellow;
+        }
+      }
+      .buttons {
+        position: absolute;
+        left: auto;
+        right: 16px;
+        top: 10px;
+        display: block;
+        .allbutton {
+          border: 1px solid black;
+          padding: 6px;
+          border-radius: 50%;
+          margin-top: 5px;
+          opacity: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          transition: 0.5s all;
+          cursor: pointer;
+          &:hover{
+            background-color: #eb4d4b;
+          }
+        }
+      }
+      .allbutton.active {
+        opacity: 1;
+      }
+      .add_cart {
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #eb4d4b;
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%);
+        bottom: -62px;
+        transition: 0.5s all;
+        overflow: hidden;
+        opacity: 0;
+        height: 0;
+        width: 120px;
+        cursor: pointer;
+      }
+      .add_cart.active {
+        height: 34px;
+        opacity: 1;
+      }
+    }
+   
+  }
+  .owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev {
+    width: 34px;
+    border-radius: 50%;
+    background: red;
+    color: white;
+    border: none;
+    padding: 0!important;
+    font-size: 26px;
+    font-weight: 700;
+}
+  
+}
