--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,10 +1,10 @@
-@import "./header";
-@import "./footer";
-@import "./clipboard";
-@import "./cart";
-@import "./login";
-@import "./registr";
-@import "./style";
-@import "./collections";
-@import "./htcTouch";
+@import "./pages/header";
+@import "./pages/footer";
+@import "./pages/clipboard";
+@import "./pages/cart";
+@import "./pages/login";
+@import "./pages/registr";
+@import "./pages/style";
+@import "./pages/collections";
+@import "./pages/htcTouch";
 
