--- a/assets/scss/pages/_header.scss
+++ b/assets/scss/pages/_header.scss
@@ -130,6 +130,7 @@ header {
             height: 62%;
             overflow: auto;
             .box_device {
+              padding: 0;
               li {
                 border-bottom: 1px solid rgb(167, 164, 164);
                 list-style: none;
