--- a/assets/scss/pages/_registr.scss
+++ b/assets/scss/pages/_registr.scss
@@ -10,6 +10,144 @@
 #registration {
   padding-top: 30px;
   padding-bottom: 30px;
+  .left {
+    .collection_ctgr {
+      padding-bottom: 5px;
+      border: 1px solid #dfdfdf;
+
+      h5 {
+        color: #555;
+        background-color: #f5f5f5;
+        padding: 10px;
+      }
+    }
+
+    .collection_refine {
+      margin-top: 30px;
+      border: 1px solid #dfdfdf;
+
+      h5 {
+        color: #555;
+        background-color: #f5f5f5;
+        padding: 10px;
+      }
+      .buttons {
+        transition: 0.7s;
+        border: none;
+        margin-top: 20px;
+        margin: 20px 10px 15px;
+        border-radius: 0;
+        background-color: #232323;
+        height: 34px;
+        display: flex;
+        justify-content: center;
+
+        &:hover {
+          background-color: #eb4d4b;
+        }
+      }
+
+      .items {
+        label {
+          color: #888;
+          margin-left: 3px;
+        }
+
+        padding-left: 10px;
+      }
+    }
+    .collections_lastsellers {
+      margin-top: 403px;
+    }
+    .collections_bestsellers {
+      margin-top: 30px;
+    }
+    .collections_bestsellers,
+    .collections_lastsellers {
+      border: 1px solid #dfdfdf;
+
+      h5 {
+        color: #555;
+        background-color: #f5f5f5;
+        font-size: 18px;
+        font-weight: 500;
+        padding: 10px;
+      }
+
+      .device {
+        .image {
+          padding: 10px;
+          display: flex;
+          width: 85px;
+          height: 85px;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        .text {
+          margin-left: 10px;
+
+          span {
+            display: block;
+            font-weight: 400;
+            font-family: "Poppins", sans-serif;
+          }
+
+          .red {
+            color: #eb4d4b;
+            font-weight: 500;
+          }
+          .price {
+            display: flex;
+            .line {
+              margin-left: 3px;
+              color: #888;
+              text-decoration: line-through;
+            }
+          }
+        }
+      }
+    }
+
+    .big_discount {
+      margin-top: 30px;
+      .image {
+        position: relative;
+        img {
+          width: 100%;
+          position: absolute;
+        }
+        .img {
+          width: 0;
+          height: 0;
+          top: 160px;
+          left: 145px;
+          transition: 0.5s all;
+          position: absolute;
+        }
+        &:hover {
+          .img {
+            width: 260px;
+            height: 360px;
+            top: 0;
+            left: 0;
+            transform: rotateZ(180deg);
+            background-color: #9c96963f;
+          }
+        }
+      }
+    }
+
+    .showPages {
+      margin-top: 30px;
+      padding: 8px 16px;
+      background-color: #f5f5f5;
+      p {
+        padding-top: 14px;
+      }
+    }
+  }
   .alert {
     .warning {
       padding: 10px;
@@ -73,6 +211,23 @@
         padding-top: 10px;
         padding-bottom: 10px;
       }
+    }
+  }
+  .collections_accordion{
+    .collect_title{
+      padding: 5px;
+      background-color: #dfdbdb;
+      display: flex;
+      justify-content: space-between;
+      
+      i.active{
+        transform:rotate(180deg);
+      }
+
+    }
+    .collect_info{
+      display: none;
+      
     }
   }
 }
