--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2957,14 +2957,14 @@ footer .secondFooter .box .text-img p a {
   font-size: 13px;
   color: #333;
 }
-#login .container .row .registr a .reg_btn {
+#login .container .row .registr .reg_btn_ {
   transition: 0.8s;
   background-color: #333;
   color: white;
   border-color: #333;
   border-radius: 0;
 }
-#login .container .row .registr a .reg_btn:hover {
+#login .container .row .registr .reg_btn_:hover {
   background-color: #eb4d4b;
   border-color: #eb4d4b;
 }
@@ -5493,6 +5493,13 @@ footer .secondFooter .box .text-img p a {
   letter-spacing: 0.5px;
   color: #eb4d4b;
   display: inline-block;
+}
+#products .owl-carousel .owl-nav button.owl-next, #products .owl-carousel .owl-nav button.owl-prev {
+  width: 25px;
+  height: 25px;
+  background-color: red;
+  color: white;
+  font-weight: 600;
 }
 @media screen and (max-width: 391px) {
   #products .item .detail {
